fix subtitle align in hero

--- a/css/main.css
+++ b/css/main.css
@@ -489,6 +489,7 @@ img {
 
 .experience__item-text {
   color: var(--color-red);
+  text-align: center;
 }
 
 /* catalog */
